--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,13 @@ authors = [
     { name = "Stephen DeWitt", email = "dewittsj@ornl.gov" }
 ]
 readme = "README.md"           # Optional, could also be "README.rst"
-license = { text = "MIT" }     # SPDX license identifier
-requires-python = ">=3.11"     # Minimum Python version
+license = { text = "Apache-2.0 WITH LLVM-exception" }     # SPDX license identifier
+requires-python = ">=3.12"     # Minimum Python version
 
 # Runtime dependencies
 dependencies = [
-    "requests>=2.31.0",
+    "pyvista",
+    "opencv-python",
     "numpy>=1.26.0",
 ]
 
